# homework_05082020

./: CMakeLists.txt  graphicsview.cpp  graphicsview.h  gview.cpp  gview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shapepropersdialog.cpp  shapepropersdialog.h  shapepropersdialog.ui  shapepropmodel.cpp  shapepropmodel.h
